# QtRoomDashboard

./: CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  README.md  SensorModel.cpp  SensorModel.h  main.cpp  main.qml
